Added SCEditor and visual improvements.
Nothing too too special.

--- a/assets/themes/default/style.css
+++ b/assets/themes/default/style.css
@@ -19,6 +19,7 @@ a:hover{
 	font-size: 15px;
 	margin-right: 7px;
 	margin-top: 1.2px;
+	font-weight:400;
 }
 
 .header{
@@ -94,7 +95,6 @@ a:hover{
 
 .postContent{
 	color: black;
-	font-weight: bold;
 }
 
 .postContent img{
@@ -106,6 +106,7 @@ a:hover{
 .postFooter{
 	color: #184D0F;
 	overflow: hidden;
+	margin-top:30px;
 }
 
 .postAuthor{
